# TestJNI

./: .gitignore  build.bat
native-lib/: CMakeLists.txt  Student.h  StudentImpl.cpp
src/: Main.java  Student.java
